fix bugs on mobile - icon set below cards

--- a/Sass/_base.scss
+++ b/Sass/_base.scss
@@ -168,7 +168,9 @@ main {
     .project-container {
         background-image: url(../images/sand-lg.jpg);
         background-attachment: fixed;
-        background-size: cover;
+        @include med-screens {
+            background-size: cover;     // testing mobile solution to background attachment-fixed
+        }
         background-color: lightgray;
         background-repeat: no-repeat;
         background-position-y: 100%;
