--- a/Sass/_cards.scss
+++ b/Sass/_cards.scss
@@ -34,13 +34,14 @@
                 margin: auto 0;
                 color: white;
                 font-weight: 600;
-                border-bottom: 1px solid white;
+                border: 2px solid white;
                 border-radius: 5px;
-                padding-bottom: 2px;
+                padding: 2px;
                 cursor: pointer;
-                transition: border .4s ease;
+                transition: all .2s ease;
                 &:hover {
-                    border-bottom: 1px solid $darker-blue;
+                    background-color: white;
+                    color: $blue;
                 }
             }
         }
