--- a/Sass/index.css
+++ b/Sass/index.css
@@ -732,12 +732,17 @@ html {
 main .project-container {
   background-image: url(../images/sand-lg.jpg);
   background-attachment: fixed;
-  background-size: cover;
   background-color: lightgray;
   background-repeat: no-repeat;
   background-position-y: 100%;
   padding-bottom: 50px;
   position: relative;
+}
+
+@media (min-width: 768px) {
+  main .project-container {
+    background-size: cover;
+  }
 }
 
 main h1 {
@@ -916,16 +921,17 @@ footer .linkedin {
   margin: auto 0;
   color: white;
   font-weight: 600;
-  border-bottom: 1px solid white;
+  border: 2px solid white;
   border-radius: 5px;
-  padding-bottom: 2px;
+  padding: 2px;
   cursor: pointer;
-  -webkit-transition: border .4s ease;
-  transition: border .4s ease;
+  -webkit-transition: all .2s ease;
+  transition: all .2s ease;
 }
 
 .main-container .card .info-row .view-more:hover {
-  border-bottom: 1px solid #043a66;
+  background-color: white;
+  color: rgba(59, 167, 255, 0.8);
 }
 
 .main-container .card .icon-modal {
@@ -1078,9 +1084,16 @@ footer .linkedin {
   -webkit-transition: opacity .5s ease;
   transition: opacity .5s ease;
   right: 50%;
-  width: 500px;
-  margin-right: -250px;
+  width: 300px;
+  margin-right: -150px;
   margin-top: 10px;
+}
+
+@media (min-width: 768px) {
+  .icon-container .icon-modal {
+    width: 500px;
+    margin-right: -250px;
+  }
 }
 
 .icon-container .icon-modal p {
